service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-web-hello
spec:
  type: NodePort
  selector:
    app: k8s-web-hello
  ports:
  - port: 3333
    targetPort: 3000
    nodePort: 30003
